[package]
name = "tlb"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
k8s-openapi = { version = "0.25.0", features = ["v1_30"] }
kube = { version = "1.1.0", features = ["runtime", "client", "derive"] }
schemars = "0.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
