[package]
name = "tlb"
version = "0.6.1"
edition = "2024"

[[bin]]
name = "controller"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.88"
base64 = "0.22"
clap = { version = "4.5.40", features = ["derive"] }
env_logger = "0.11.8"
k8s-openapi = { version = "0.25.0", features = ["v1_30"] }
rand = "0.8"
reqwest = { version = "0.12.5", features = ["json", "rustls-tls"], default-features = false }
kube = { version = "1.1.0", features = ["runtime", "client", "derive"] }
kube-client = "1.1.0"
log = "0.4.27"
schemars = "0.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["io-util", "macros", "rt-multi-thread"] }
